Fix nvabr overlapping menu when transitioning from logo to search box

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -1,9 +1,7 @@
 $font-family: system-ui, -apple-ui, -apple-system, BlinkMacSystemFont,
   'Segoe UI', Helvetica, Arial, sans-serif;
 
-/*
-* Colors
-*/
+//#region Colors
 $color-blue: #4b31f6;
 $color-facebook-blue: #4267b2;
 $color-blue-opacity: rgba(110, 99, 207, 0.05);
@@ -19,10 +17,9 @@ $color-border-light: rgba(0, 0, 0, 0.08);
 $color-background-light: #f1f1f3;
 $color-background: #dfdfe1;
 $color-white: #feffff;
+//#endregion
 
-/*
-* Sizes
-*/
+//#region Sizes
 $person-avatar-size: 120px;
 
 $person-card-width: 170px;
@@ -31,10 +28,9 @@ $person-card-height: 260px;
 $page-min-width: 320px;
 $page-max-width: 720px;
 $page-mobile-width: 640px;
+//#endregion
 
-/*
-* Spacing
-*/
+//#region Spacing
 $spacing-1px: 1px;
 $spacing-2px: 2px;
 $spacing-5px: 5px;
@@ -46,3 +42,9 @@ $spacing-20px: 20px;
 $spacing-25px: 25px;
 $spacing-30px: 30px;
 $spacing-40px: 40px;
+//#endregion
+
+//#region Stacking order
+$z-index-sticky: 1;
+$z-index-menu: 2;
+//#endregion
